dict: limit to max one gloss

--- a/dictionary/templates/definition.html
+++ b/dictionary/templates/definition.html
@@ -8,7 +8,7 @@
         {% for sense in entry.senses %}
         <li>
             <div>
-                <small>DEFINITION</small> <span>{{ sense.glosses[0] }}</span>
+                <small>DEFINITION</small> <span>{{ sense.gloss }}</span>
                 {% if sense.examples %}
                 <br />
                 <small>EXAMPLES</small>
