refactor: change dict path, silent find and better prompt template

--- a/wordsea/dictionary/templates/prompt.html
+++ b/wordsea/dictionary/templates/prompt.html
@@ -12,8 +12,8 @@ The prompt must generate an image without any text, so work only with visual cue
 Keep it concise and precise. Explain your answer and generate ONE prompt only. Provide your answer as JSON with the following format:
 ```json
 {
-    "explanation": "explain why proposed prompt is suitable for remembering the word '{{word}}'",
+    "explanation": "explain why proposed prompt is suitable for remembering the word '{{ word }}'",
     "prompt": "your prompt here",
 }
 ```
-Remember to keep the prompt short and simple. Do not explain yourself. Good luck!
+Remember to keep the prompt short and simple. Good luck!
