app: add dark theme

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+    @apply bg-white dark:bg-slate-800 text-black dark:text-slate-300;  }
+  
