db: change collection name

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -4,5 +4,5 @@
 
 body {
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    @apply bg-white dark:bg-slate-800 text-black dark:text-slate-300;  }
+    @apply bg-slate-50 dark:bg-slate-800 text-slate-900 dark:text-slate-300;  }
   
