--- a/app/src/app.css
+++ b/app/src/app.css
@@ -7,7 +7,8 @@
 
 body {
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    @apply bg-slate-50 dark:bg-slate-800 text-slate-800 dark:text-slate-300;  }
+    /* @apply bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-300;  } */
+    @apply bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-300;  }
 
 @layer base {
     html {
