chore: add Gemma2 model, update playground params

--- a/wordsea/dictionary/templates/prompt.html
+++ b/wordsea/dictionary/templates/prompt.html
@@ -9,7 +9,7 @@ Base your answer on your knowledge and the following HTML, which contains defini
 
 The prompt must generate an image without any text, so work only with visual cues. Think of something unique, memorable and easy to connect with the word's meaning. You can omit less important or hard-to-visualize definitions. Add additional single-word features to the prompt describing the visual appearance of the scenery and the style of the image. 
 
-Keep it concise and precise. Explain your answer and generate only one prompt. Provide your answer as JSON with the following format:
+Keep it concise and precise while sticking to full sentences. Explain your answer and generate only one prompt. Provide your answer as JSON with the following format:
 ```json
 {
     "explanation": "explain why proposed prompt is suitable for remembering the word '{{ word }}'",
