--- a/app/src/app.css
+++ b/app/src/app.css
@@ -6,10 +6,11 @@
 @tailwind utilities;
 
 body {
-    @apply bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-300;  }
+	@apply bg-white text-slate-800 dark:bg-slate-800 dark:text-slate-300;
+}
 
 @layer base {
-    html {
-        font-family: "Inter var", system-ui, sans-serif;
-    }
+	html {
+		font-family: 'Inter var', system-ui, sans-serif;
+	}
 }
