feat: add Flux Schnell and Mistral Nemo models

--- a/wordsea/dictionary/templates/prompt.html
+++ b/wordsea/dictionary/templates/prompt.html
@@ -7,13 +7,13 @@ Base your answer on your knowledge and the following HTML, which contains defini
 {{ definition }}
 ```
 
-The prompt must generate an image without any text, so work only with visual cues. Think of something unique, memorable and easy to connect with the word's meaning. You can omit less important or hard-to-visualize definitions. Add additional single-word features to the prompt describing the visual appearance of the scenery and the style of the image. 
+Think of something unique, memorable and easy to connect with the word's meaning. You can omit less important or hard-to-visualize definitions. Be creative and let your imagination flow! Add additional single-word features to the prompt describing the visual appearance of the scenery and the style of the image. 
 
-Keep it concise and precise while sticking to full sentences. Explain your answer and generate only one prompt. Provide your answer as JSON with the following format:
+Stick to full sentences, but keep the prompt short and concise. Omit the imperative phrases. Explain your answer and generate only one prompt. Provide your answer as JSON with the following format:
 ```json
 {
     "explanation": "explain why proposed prompt is suitable for remembering the word '{{ word }}'",
-    "prompt": "your prompt here",
+    "prompt": "final prompt here",
 }
 ```
-Use single quotation marks in JSON values. Remember to keep the prompt short and simple. Good luck!
+Use single quotation marks in JSON values. Good luck!
